# -Knight-s-Quest-Il-Santo-Graal

./: .gitignore  DEPLOY.md  README.md  build_web.py  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: __init__.py  collectible.py  config.py  enemy.py  game.py  level.py  main.py  platform.py  player.py  sprite_manager.py
tests/: __init__.py  test_collectible.py  test_game.py  test_platform.py  test_player.py
